--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\EaseEasy.LayerDevDemo.RestServices\packages.config" />
   <repository path="..\EaseEasy.LayerDevDemo.WebApiServices\packages.config" />
+  <repository path="..\EaseEasy.LayerDevDemo.WpfClient\packages.config" />
   <repository path="..\EaseEasy.Services\packages.config" />
 </repositories>
