--- a/EaseEasy.LayerDevDemo.RestServices/EaseEasy.LayerDevDemo.RestServices.csproj
+++ b/EaseEasy.LayerDevDemo.RestServices/EaseEasy.LayerDevDemo.RestServices.csproj
@@ -68,7 +68,9 @@
   <ItemGroup>
     <Content Include="index.html" />
     <Content Include="jquery.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
